# MeanShift-Segmentation-opengl

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Assets/Shaders/: MeanShiftFragmentShader.glsl  MeanShiftVertexShader.glsl  NormalTextureDisplayFragmentShader.glsl  QuadFragmentShader.glsl  QuadVertexShader.glsl
src/: main.cpp
src/Application/: UserInterface.cpp  UserInterface.h  Window.cpp  Window.h
src/Rendering/: Buffers.cpp  Buffers.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
